sfdx-framework/sfdx-src/objects/baf_LoggerConfig__c/baf_LoggerConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Determines how logging will behave.</description>
    <label>BAF Logger Config</label>
</CustomObject>