sfdx-framework/sfdx-src/objects/baf_LoggerConfig__c/fields/BufferLogs__c.field-meta.xml
<CustomField>
    <fullName>BufferLogs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables log buffering, to dump logs only when CommitLogs() is called</description>
    <inlineHelpText>Enables log buffering, to dump logs only when CommitLogs() is called</inlineHelpText>
    <label>Buffer Logs</label>
    <type>Checkbox</type>
</CustomField>