sfdx-framework/sfdx-src/objects/baf_LoggerConfig__c/fields/DebugLogDisabled__c.field-meta.xml
<CustomField>
    <fullName>DebugLogDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables DEBUG level logging</description>
    <inlineHelpText>Disables DEBUG level logging</inlineHelpText>
    <label>Debug Log Disabled</label>
    <type>Checkbox</type>
</CustomField>