sfdx-framework/sfdx-src/objects/baf_LoggerConfig__c/fields/FineLoggingDisabled__c.field-meta.xml
<CustomField>
    <fullName>FineLoggingDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables FINE level logging</description>
    <inlineHelpText>Disables FINE level logging</inlineHelpText>
    <label>Fine Logging Disabled</label>
    <type>Checkbox</type>
</CustomField>