sfdx-framework/sfdx-src/objects/baf_LoggerConfig__c/fields/InfoLoggingDisabled__c.field-meta.xml
<CustomField>
    <fullName>InfoLoggingDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables INFO level logging</description>
    <inlineHelpText>Disables INFO level logging</inlineHelpText>
    <label>Info Logging Disabled</label>
    <type>Checkbox</type>
</CustomField>